[tool.poetry]
name = "klee"
version = "0.0.1"
description = "Kleene's CLI tool."
authors = ["Lasse Grinderslev Andersen <lasse@philomath.dk>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
attrs = "^23.2.0"
httpx = "^0.27.0"
python-dateutil = "^2.9.0.post0"
websockets = "^12.0"
rich = "^13.7.1"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
klee = 'klee.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
